[gd_scene load_steps=4 format=3 uid="uid://d2707t8cxxdvp"]

[ext_resource type="Theme" uid="uid://c1tenirmy1xiy" path="res://assets/menu/main_menu_theme.tres" id="1_exyan"]
[ext_resource type="Script" path="res://scripts/ui/login_window.gd" id="1_onibv"]
[ext_resource type="PackedScene" uid="uid://xlramxseaccj" path="res://scenes/ui/create_user.tscn" id="2_s3cbq"]

[node name="Login_Window" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_exyan")
script = ExtResource("1_onibv")
Create_User_Window = ExtResource("2_s3cbq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 600
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="error" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Create User" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CREATE NEW USER"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "USERNAME"

[node name="Username" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "PASSWORD"

[node name="Password" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
text = "CANCEL"

[node name="Login" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "LOGIN"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Create User" to="." method="_on_create_user_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer3/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer3/Login" to="." method="_on_login_button_down"]
